--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: dummy
-        image: docker.pkg.github.com/fredr/dummy/dummy:{{ .Chart.appVersion }} 
+        image: docker.pkg.github.com/fredr/dummy/dummy:{{ .Chart.AppVersion }} 
         ports:
         - containerPort: 3000
           name: http
