--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- .Values.labels | toYaml | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       {{- .Values.labels | toYaml | nindent 6 }}
