--- a/helm/templates/service-canary.yaml
+++ b/helm/templates/service-canary.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: dummy-canary
+  namespace: dummy-canary
   labels:
     {{- .Values.labels | toYaml | nindent 4 }}
 spec:
